--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,13 @@ h1 {
   line-height: 1.1;
 }
 
+ul {
+  text-align: left;
+  list-style-position: inside;
+  margin: 0;
+  padding: 0;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
